Fixed sticky footer problem by wrapping everying

--- a/public/style.css
+++ b/public/style.css
@@ -4,14 +4,19 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-body{
+html, body{
+ height: 100%;
+}
+body {
   display: flex;
   flex-direction: column;
+  
 }
-main{
-  margin: 10px 0px;
-  padding: 0;
+
+#wrapper{
+  flex: 1 0 auto;
 }
+
 section{
   margin: 10px;
   padding: 5px;
@@ -30,7 +35,6 @@ p{
   }
 
 .rounded-borders{
-  border: solid whitesmoke 2px;
   border-radius: 10px;
 }
 .circle{
@@ -63,7 +67,7 @@ p{
 }
 .icon-link-img{
   color: black;
-  background: whitesmoke;
+  background: #f5f5f5;
   width: 30px;
   margin: 5px 20px;
   padding: 5px;
@@ -75,6 +79,7 @@ p{
   flex-direction: row;
   flex: 1 0 auto;
   justify-content: space-evenly;
+  max-width: 600px;
 }
 .header-button{
   background: none;
@@ -85,20 +90,25 @@ p{
   color: whitesmoke;
   margin: auto 10px;
 }
+
 .body-main-container{
   display: flex;
   flex: 1 0 auto;
   flex-direction: row;
+  max-width: 1800px;
 }
 .body-header-text{
   margin: 10px 5px;
   padding: 10px 5px;
 }
 .body-section-1{
-  
+  max-width: 500px;
+  margin: 0px 10px 0px auto;
 }
 .body-section-2{
+  max-width: 800px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  margin: 0px auto 0px 20px;
 }
 .profile-img-box{
   max-width: 100%;
@@ -118,6 +128,11 @@ p{
   padding: 10px;
   text-align: left;
 }
+.separator{
+  display: block;
+  margin: auto;
+}
+
 .footer-main {
   display: flex;
   flex-direction: column;
@@ -239,8 +254,11 @@ p{
     }
     .body-section-1{
       width: 65%;
+      margin: 5px auto 5px auto;
+      
     }
     .body-section-2{
-      width: 90%;
+      width: 95%;
+      margin: 10px auto 5px auto;
     }
 }
